# sadenSL

./: .babelrc  .eslintignore  .eslintrc.json  .gitignore  LICENSE.md  README.md  electron-builder.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.dev.js  webpack.config.js  webpack.config.prod.js
addon/: README.md  package-lock.json  package.json  pnpm-lock.yaml
addon/native/: Cargo.toml
addon/native/src/: lib.rs
assets/: LICENSE.txt
cli/: buildNative.js  clean.js  package.js
renderer/: .babelrc  .eslintignore  .eslintrc  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.dev.js  webpack.config.js  webpack.config.prod.js
renderer/src/: App.js  App.jsx  RTL.js  RTL.jsx  index.css  index.html  index.js  index.jsx  index.ts  index.tsx  theme.js
renderer/src/api/: createProduct.ts
renderer/src/components/: Appbar.js  Appbar.jsx  Bar.jsx  Card.js  Chart.js  Deposits.js  Deposits.jsx  Home.js  Home.jsx  OrderForm.tsx  Sidebar.js  Sidebar.jsx  listItems.js
renderer/src/contexts/: GlobalContext.jsx  GlobalContext.tsx  OneStorageContext.jsx  OneStorageContext.tsx  SellerContext.jsx  (+2 more)
renderer/wasm/: Cargo.toml
src/: index.html  ipc.js  main.js  main.ts  preload.js
src/db/: init.js  init.ts  main.js
src/helpers/: createWindow.js  createWindow.ts  error.js  error.ts
src/ipc/: database.js  database.ts  helpers.js  helpers.ts  initIpc.ts
src/store/: storeDb.js  storeDb.ts
src/updater/: main.ts
src/util/: initDatabase.js  native.js  native.ts
test/: bash.sh
(+58 files in other folders)
