[package]
name = "addon"
version = "0.1.0"
authors = ["sabs"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "addon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
regex = "1"
num-format = "0.4.0"
chrono = "0.4"
serde = "1.0.114"
uuid = { version = "0.8", features = ["serde", "v4"] }
